# codex-usage-overlay

./: README.md  main.py  pyproject.toml  setup.ps1  启动-Codex余量.cmd  启动-xiexie余量.cmd
.github/workflows/: tests.yml
tests/: test_companion.py  test_overlay.py  test_pet_identity.py  test_pet_window.py  test_service.py  test_settings.py  test_startup.py  test_usage.py
xiexie_usage_overlay/: __init__.py  app_server.py  companion.py  overlay.py  pet_identity.py  pet_window.py  service.py  settings.py  startup.py  usage.py
