[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-usage-overlay"
version = "0.4.0"
description = "A compact Windows overlay for Codex plan usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codex-usage-overlay = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["xiexie_usage_overlay*"]
